--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
 		<div class="joke">
 			<h1>Random Programming Jokes</h1>
@@ -9,4 +11,5 @@
 			<button id="newJokeBtn">New Joke</button>
 		</div>
 	</body>
+<script src="index.js"></script>
 </html>
